--- a/layout5.html
+++ b/layout5.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="style5.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -29,8 +29,8 @@
                     <div class="top-navbar">
                         <div class="left z-3 ">
                             <ul>
-                                <li class="pe-3"> <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
-                                            fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                <li class="pe-3"> <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="25"
+                                            height="25" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                             <path
                                                 d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                                         </svg></a> </li>
@@ -77,8 +77,8 @@
                                 </li>
                                 <li class="border-2 ps-3 ms-3 fw-bold border-start d-flex align-items-center"><a
                                         href="">HÍRLEVÉL</a> </li>
-                                        <li class="border-2 ps-3 ms-3 fw-bold border-start d-flex align-items-center"><a
-                                            href="">VÁLLALKOZÓK</a> </li>
+                                <li class="border-2 ps-3 ms-3 fw-bold border-start d-flex align-items-center"><a
+                                        href="">VÁLLALKOZÓK</a> </li>
                             </ul>
 
                         </div>
@@ -115,7 +115,7 @@
                                 <a class="nav-link active text-white" aria-current="page" href="#">TUDÁSBÁZIS</a>
                             </li>
                             <button type="button"
-                                class="button-nav btn btn-warning text-white d-flex ms-2 me-5 mt-2 mb-2 border-0">TERMÉKKERESŐ</button>
+                                class="button-nav btn btn-warning text-white d-flex ms-2 me-5 mt-2 mb-2">TERMÉKKERESŐ</button>
 
                     </div>
                 </div>
@@ -144,15 +144,16 @@
         <div class="layout2container">
             <div class="layout2-hero">
                 <div class="container">
-                    <div class="container-main col-lg-7  rounded">
+                    <div class="container-main col-lg-6  rounded">
                         <div class="p-5">
-                            <div class="col-lg-7 contentthree-h1">
-                                <h1 class="fw-bold"> NEMZETI MINŐSÉGRENDSZER</h1>
+                            <div class="col-lg-12 contentthree-h1">
+                                <h1 class="">KERESSE A VÉDJEGYES TERMÉKEKET!</h1>
                             </div>
                             <div class="col-lg-12">
-                                <p>Megalapítása óta a KMÉ-védjegy az egyik legmagasabb szintű elismerés lett
-                                    Magyarországon az élelmiszerek viszonylatában. A KMÉ-t az Európai Unió is hiteles
-                                    minőségi tanúsítványként ismeri el.</p>
+                                <p>Termékkeresőnk segítségével különböző szempontok szerint keresgélhet a
+                                    KMÉ-védjegyet,valamint a KMÉ arany fokozatát viselő termékek között. A nemzeti
+                                    minőségrendszernek megfelelő termékek adatain túl, a hivatalos termékfotókat is
+                                    megtekintheti.</p>
                             </div>
                         </div>
                     </div>
@@ -160,26 +161,108 @@
 
                 </div>
             </div>
-            <div class="contenttwo">
+
+            <div class="search-product pt-5 pb-5">
                 <div class="container">
-                    <div class="d-flex flex-wrap">
-                        <div class="box arrow-right col-lg-6 pt-5 pb-5">
-                            <h1 class="text-white fw-bold col-lg-10 contenttwo-text">KEZDETEK</h1>
-                            <p class="text-white contenttwo-text2">A KMÉ-védjegy az Agrárminisztérium és a Nébih közös,
-                                kiemelt kezdeményezéseként jött létre 2019-ben.
-                                </br></br>
-
-                                Szakszerű kidolgozásában az élelmiszeripar egésze részt vállalt. Ennek köszönhetően a
-                                minőségrendszer a valós piaci szükségletekre épül, szakmailag és tudományosan is
-                                megalapozott.</p>
-
+                    <div class="search-product-header d-flex justify-content-center mb-3">
+                        <h1>TERMÉKKERESŐ</h1>
+                    </div>
+                    <div class="selectmenu-container">
+                        <div class="selectmenu select mb-3 d-flex flex-wrap">
+                            <label class="col-lg-2 pe-3 d-flex justify-content-end align-items-center"
+                                for="">Márkanév</label>
+                            <select class="col-lg-8" name="" id="">
+                                <option selected></option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
                         </div>
-                        <div class="image-box col-lg-6 ">
-                            <img class=" image-content" src="images/Layer 121.png" alt="">
+                        <div class="selectmenu select mb-3 d-flex flex-wrap">
+                            <label class="col-lg-2 pe-3 d-flex justify-content-end align-items-center"
+                                for="">Termékcsoport</label>
+                            <select class="col-lg-8" name="" id="">
+                                <option selected></option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                        <div class="selectmenu select mb-3 d-flex flex-wrap">
+                            <label class="col-lg-2 pe-3 d-flex justify-content-end align-items-center"
+                                for="">Gyártó/forgalmazó</label>
+                            <select class="col-lg-8" name="" id="">
+                                <option selected></option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </div>
+                        <div class="selectmenu select mb-3 d-flex flex-wrap">
+                            <label class="col-lg-2 pe-3 d-flex justify-content-end align-items-center"
+                                for="">Védjegy</label>
+                            <div class="col-lg-8 d-flex justify-content-between">
+                                <div class="d-flex align-items-center">
+                                    <div class="form-check pe-3">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                        <img src="" alt="">
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                        <img src="" alt="">
+                                    </div>
+                                </div>
+                                <div>
+                                    <button class="btn text-white footer-button rounded fw-bold">KERESÉS</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+
+            <div class="content-customermain mt-5">
+                <div class="container">
+
+                    <div class="content-customermain-hero">
+                        <h1 class="text-center">KERESŐ TERMÉKKATEGÓRIÁNKÉNT</h1>
+                        <div class="container">
+                            <div class="row d-flex flex-wrap">
+                                <div class="col-md-4">
+                                    <div class="customermain-image-container rounded mt-5 mb-5">
+                                        <img src="images/Layer 57.png" alt="Kép 1" class="rounded-image">
+                                        <div class="customermain-image-text ">
+                                            <p>TEJTERMÉKEK</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="customermain-image-container mt-5 mb-5">
+                                        <img src="images/Layer 60.png" alt="Kép 2" class="rounded-image">
+                                        <div class="customermain-image-text ">
+                                            <p class="">SZÁRAZTÉSZTÁK</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="customermain-image-container mt-5 mb-5">
+                                        <img src="images/Layer 59.png" alt="Kép 3" class="rounded-image">
+                                        <div class="customermain-image-text">
+                                            <p class="">HÚSKÉSZÍTMÉNYEK</p>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
 
 
             <div class="footer">
@@ -238,7 +321,7 @@
 
 
                         <div class="row footer-bottom ">
-                            <p class="d-flex justify-content-end m-0">Minden jog fentartva. Élelmiszerlánc-biztonsági
+                            <p class="d-flex justify-content-end">Minden jog fentartva. Élelmiszerlánc-biztonsági
                                 Nonprofit Kft. (ÉLBC Kft.)2023.</p>
                             <ul class="d-flex justify-content-end">
                                 <li><a href="">Adatkezelési tájékoztató</a></li>
