--- a/layout5.html
+++ b/layout5.html
@@ -28,16 +28,16 @@
 
                     <div class="top-navbar">
                         <div class="left z-3 ">
-                            <ul>
-                                <li class="pe-3"> <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="25"
-                                            height="25" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                            <ul class="d-flex align-items-center">
+                                <li class="pe-3"> <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
+                                            fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                                             <path
                                                 d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                                         </svg></a> </li>
-
-                                <li class="ps-3 pe-3 ms-2 me- border-2 border-start"><a href="">GYIK</a> </li>
-
-                                <li class="ps-3 pe-3 me-2 border-2 border-start"><a href="">KAPCSOLAT</a> </li>
+                                        <div class="line ps-2   d-flex align-items-center"></div>
+                                <li class="ps-3 pe-3 ms-2 "><a href="">GYIK</a> </li>
+                                <div class="line ps-2   d-flex align-items-center"></div>
+                                <li class="ps-3 pe-3 me-2 "><a href="">KAPCSOLAT</a> </li>
 
 
                             </ul>
@@ -50,35 +50,37 @@
                         <img class=" only-logo2" src="images/Vector Smart Object.png" alt="">
                     </div> -->
                         <div class="right  z-2">
-                            <ul>
-                                <li class="border border-2 rounded p-1 d-flex align-items-center"><a href=""><svg
-                                            xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                            <ul class="d-flex align-items-center">
+                                <li class="border border-2 rounded  d-flex align-items-center"><a href=""><svg
+                                            xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                                             <path
                                                 d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
                                         </svg></a>
 
                                 </li>
-                                <li class="ms-3 me-3 border border-2 rounded p-1 d-flex align-items-center"><a
-                                        href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                <li class="ms-3 me-3 border border-2 rounded  d-flex align-items-center"><a
+                                        href=""><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                             <path
                                                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
                                         </svg></a>
 
                                 </li>
-                                <li class="border border-2 rounded p-1 d-flex align-items-center"><a href=""><svg
-                                            xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                <li class="border border-2 rounded  d-flex align-items-center"><a href=""><svg
+                                            xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
                                             <path
                                                 d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z" />
                                         </svg></a>
 
                                 </li>
-                                <li class="border-2 ps-3 ms-3 fw-bold border-start d-flex align-items-center"><a
+                                <div class="line ps-3   d-flex align-items-center"></div>
+                                <li class=" ps-3 ms-1 fw-bold  d-flex align-items-center"><a
                                         href="">HÍRLEVÉL</a> </li>
-                                <li class="border-2 ps-3 ms-3 fw-bold border-start d-flex align-items-center"><a
-                                        href="">VÁLLALKOZÓK</a> </li>
+                                        <div class="line ps-3   d-flex align-items-center"></div>
+                                        <li class="ps-3 ms-1 fw-bold  d-flex align-items-center"><a
+                                            href="">VÁLLALKOZÓK</a> </li>
                             </ul>
 
                         </div>
@@ -115,7 +117,7 @@
                                 <a class="nav-link active text-white" aria-current="page" href="#">TUDÁSBÁZIS</a>
                             </li>
                             <button type="button"
-                                class="button-nav btn btn-warning text-white d-flex ms-2 me-5 mt-2 mb-2">TERMÉKKERESŐ</button>
+                                class="button-nav btn btn-warning text-white d-flex ms-2 me-5 mt-2 mb-2 border-0">TERMÉKKERESŐ</button>
 
                     </div>
                 </div>
@@ -128,19 +130,20 @@
             <div class="left-bottom-navbar">
                 <ul class="d-flex align-items-center">
                     <li class="me-1 pe-3 "><a href="">ISMERJE MEG A KMÉ-T!</a> </li>
-                    <li class="ps-3 pe-1 me-1 border-2  border-start"><a href="">VÉDJEGYES TERMÉKEK</a> </li>
+                    <div class="line2 ps-1 "></div>
+                    <li class="ps-3 pe-1 me-1 "><a href="">VÉDJEGYES TERMÉKEK</a> </li>
                 </ul>
             </div>
             <div class="right-bottom-navbar ">
                 <ul class="d-flex align-items-center">
                     <li class="me-1 pe-3"><a href="">HÍRBLOG</a> </li>
-                    <li class="ps-3 pe-2 me-1 border-2 border-start"><a href="">TUDÁSBÁZIS</a> </li>
+                    <div class="line2 ps-1 "></div>
+                    <li class="ps-3 pe-2 me-1 "><a href="">TUDÁSBÁZIS</a> </li>
                     <button type="button"
                         class="button-nav btn btn-warning text-white d-flex ms-2 me-5 mt-2 mb-2">TERMÉKKERESŐ</button>
                 </ul>
             </div>
         </div>
-
         <div class="layout2container">
             <div class="layout2-hero">
                 <div class="container">
@@ -202,18 +205,18 @@
                             <label class="col-lg-2 pe-3 d-flex justify-content-end align-items-center"
                                 for="">Védjegy</label>
                             <div class="col-lg-8 d-flex justify-content-between">
-                                <div class="d-flex align-items-center">
-                                    <div class="form-check pe-3">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <img src="" alt="">
+                                <div class="d-flex col-lg-2 align-items-center">
+                                    <div class="form-check pe-3 d-flex align-items-center">
+                                        <input class="form-check-input " type="checkbox" value="" id="flexCheckDefault">
+                                        <img class="emblem ps-1 " src="images/embléma1.PNG" alt="">
                                     </div>
-                                    <div class="form-check">
+                                    <div class="form-check d-flex align-items-center">
                                         <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                        <img src="" alt="">
+                                        <img class="emblem ps-1 pe-1" src="images/embléma2.PNG" alt="">
                                     </div>
                                 </div>
                                 <div>
-                                    <button class="btn text-white footer-button rounded fw-bold">KERESÉS</button>
+                                    <button class="btn text-white footer-button rounded fw-bold ps-4 pe-4">KERESÉS</button>
                                 </div>
                             </div>
                         </div>
@@ -266,7 +269,7 @@
 
 
             <div class="footer">
-                <div class="container pt-5 pb-5 footer-top">
+                <div class="container pt-5 footer-top">
                     <div class="row">
                         <div class="col-lg-3">
                             <ul>
@@ -286,10 +289,10 @@
                                 <li><a href="">NYITÓOLDAL</a></li>
                             </ul>
                         </div>
-                        <div class="col-lg-2 ">
+                        <div class="col-lg-2 socialmedia">
                             <ul class="d-flex">
                                 <li class="me-3 border border-2 rounded p-1 d-flex align-items-center"><a href=""><svg
-                                            xmlns="http://www.w3.org/2000/svg" width="40" height="40"
+                                            xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                                             <path
                                                 d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
@@ -297,7 +300,7 @@
 
                                 </li>
                                 <li class="me-3 border border-2 rounded p-1 d-flex align-items-center"><a href=""><svg
-                                            xmlns="http://www.w3.org/2000/svg" width="40" height="40"
+                                            xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                             <path
                                                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
@@ -305,7 +308,7 @@
 
                                 </li>
                                 <li class="border border-2 rounded p-1 d-flex align-items-center"><a href=""><svg
-                                            xmlns="http://www.w3.org/2000/svg" width="40" height="40"
+                                            xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
                                             <path
                                                 d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z" />
@@ -315,19 +318,20 @@
                             </ul>
 
                         </div>
-                        <div class="col-lg-4 d-flex justify-content-end">
+                        <div class="footer-button-container col-lg-5 d-flex justify-content-end">
                             <button class="btn footer-button rounded fw-bold">LAP TETEJÉRE</button>
                         </div>
 
 
                         <div class="row footer-bottom ">
-                            <p class="d-flex justify-content-end">Minden jog fentartva. Élelmiszerlánc-biztonsági
+                            <p class="d-flex justify-content-end m-0">Minden jog fentartva. Élelmiszerlánc-biztonsági
                                 Nonprofit Kft. (ÉLBC Kft.)2023.</p>
                             <ul class="d-flex justify-content-end">
-                                <li><a href="">Adatkezelési tájékoztató</a></li>
-                                <li class="ms-2 me-2 ps-2 pe-2 border-2 border-end border-start"><a href="">Cookie
-                                        szabályzat</a> </li>
-                                <li><a href="">Cookie-k kezelése</a></li>
+                                <li><a href="">Adatkezelési tájékoztató</a> </li>
+                                <div class="line3 ps-2 me-2 mt-2 "></div>
+                                <li><a href="ms-2">Cookie szabályzat</a> </li>
+                                <div class="line3 ps-2 me-2 mt-2 "></div>
+                                <li><a href="ms-2">Cookie-k kezelése</a> </li>
 
                             </ul>
                         </div>
@@ -335,6 +339,7 @@
 
 
                 </div>
+                <img class="szechenyi" src="/images/SZ2020.png" alt="">
 </body>
 
 </html>
