some bug fixed2

--- a/layout2.html
+++ b/layout2.html
@@ -167,19 +167,21 @@
             <div class="layout2-container">
                 <div class="container">
                     <div class="d-flex flex-wrap">
-                        <div class="box arrow-right col-lg-8 pt-4  rounded mt-5 mb-5">
+                        <div class="box arrow-right col-lg-8 pt-4  rounded mt-5 mb-5 p-4">
                             <h1 class="text-white fw-bold col-lg-10 contenttwo-text mb-4">KEDVES VÁSÁRLÓ!</h1>
                             <p class="text-white contenttwo-text2">Szeretne garantáltan jó minőségű élelmiszert
                                 vásárolni? Szívesen varázsolna kiváló, hazai alapanyagokból készült, megfizethető
                                 fogásokat az asztalra? Ugyanakkor fontos szempont Önnek az élelmiszerbiztonság és a
                                 fenntarthatóság? Mindegyik kérdésre a válasz: a KMÉ-védjegy.
-
-                                A KMÉ nemzeti minőségrendszer és tanúsító védjegy, amely a termelési folyamat minden
+                            </p>
+                            <p> A KMÉ nemzeti minőségrendszer és tanúsító védjegy, amely a termelési folyamat minden
                                 szakaszában biztosítékot nyújt a kiváló minőségre, az élelmiszerbiztonságra és a
                                 fenntarthatóságra. Hitelességét a hazai viszonylatban páratlanul komplex vizsgálati
                                 rendszer adja, amely a Nemzeti Élelmiszerlánc-biztonsági Hivatal (Nébih) szaktudására
                                 épül.
                                 A KMÉ-védjegy valódi garancia a tudatos vásárlók számára. Győződjön meg róla Ön is!
+                            </p>
+                               
                                 </br></br>
                                 Demetrovics Szilárd
                                 </br>
