--- a/layout3.html
+++ b/layout3.html
@@ -29,14 +29,16 @@
                     <div class="top-navbar">
                         <div class="left z-3 ">
                             <ul class="d-flex align-items-center">
-                                <li class="pe-3"> 
+                                <li class="pe-3">
                                     <a href="#" id="search-icon">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
+                                            fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                            <path
+                                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                                         </svg>
-                                    </a> 
+                                    </a>
                                 </li>
-                                        <div class="line ps-2   d-flex align-items-center"></div>
+                                <div class="line ps-2   d-flex align-items-center"></div>
                                 <li class="ps-3 pe-3 ms-2 "><a href="">GYIK</a> </li>
                                 <div class="line ps-2   d-flex align-items-center"></div>
                                 <li class="ps-3 pe-3 me-2 "><a href="">KAPCSOLAT</a> </li>
@@ -61,8 +63,8 @@
                                         </svg></a>
 
                                 </li>
-                                <li class="ms-3 me-3 border border-2 rounded  d-flex align-items-center"><a
-                                        href=""><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
+                                <li class="ms-3 me-3 border border-2 rounded  d-flex align-items-center"><a href=""><svg
+                                            xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                             <path
                                                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
@@ -78,11 +80,10 @@
 
                                 </li>
                                 <div class="line ps-3   d-flex align-items-center"></div>
-                                <li class=" ps-3 ms-1 fw-bold  d-flex align-items-center"><a
-                                        href="">HÍRLEVÉL</a> </li>
-                                        <div class="line ps-3   d-flex align-items-center"></div>
-                                        <li class="ps-3 ms-1 fw-bold  d-flex align-items-center"><a
-                                            href="">VÁLLALKOZÓK</a> </li>
+                                <li class=" ps-3 ms-1 fw-bold  d-flex align-items-center"><a href="">HÍRLEVÉL</a> </li>
+                                <div class="line ps-3   d-flex align-items-center"></div>
+                                <li class="ps-3 ms-1 fw-bold  d-flex align-items-center"><a href="">VÁLLALKOZÓK</a>
+                                </li>
                             </ul>
 
                         </div>
@@ -106,32 +107,36 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item ">
                                 <a class="nav-link active text-white" aria-current="page" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
-                                        <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-                                      </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-dot" viewBox="0 0 16 16">
+                                        <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                                    </svg>
                                     ISMERJE MEG A
                                     KMÉ-T!</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active text-white" aria-current="page" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
-                                        <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-                                      </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-dot" viewBox="0 0 16 16">
+                                        <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                                    </svg>
                                     VÉDJEGYES
                                     TERMÉKEK</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active text-white" aria-current="page" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
-                                        <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-                                      </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-dot" viewBox="0 0 16 16">
+                                        <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                                    </svg>
                                     HÍRBLOG</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active text-white" aria-current="page" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
-                                        <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/>
-                                      </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                        class="bi bi-dot" viewBox="0 0 16 16">
+                                        <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                                    </svg>
                                     TUDÁSBÁZIS</a>
                             </li>
                             <button type="button"
@@ -163,13 +168,14 @@
             </div>
         </div>
         <div class="search-container z-1" style="display: none;">
-            <form class="container search-form my-2 my-lg-0 d-flex flex-wrap" role="search" method="get" action="http://kme2.vermis.hu/">
+            <form class="container search-form my-2 my-lg-0 d-flex flex-wrap" role="search" method="get"
+                action="http://kme2.vermis.hu/">
                 <div class="input-group">
                     <label for="exampleInputEmail1" class="form-label d-flex align-items-end fw-bold">MIT KERES?</label>
                     <input type="text" name="s" class="form-control rounded ms-5 me-5" placeholder="" title="Search" />
                     <button type="" name="submit" class="btn rounded btn-success ps-5 pe-5">KERESÉS</button>
                     <div class="d-flex align-items-center">
-                        <a href="">
+                        <a href="#" id="close-search">
                             <span class="ms-3 me-1">x</span>
                             <span>BEZÁRÁS</span>
                         </a>
@@ -197,9 +203,9 @@
                 </div>
             </div>
             <div class="contenttwo">
-                <div class="container">
-                    <div class="d-flex flex-wrap">
-                        <div class="box arrow-right col-lg-6 mt-5 mb-5 pt-5 pb-5">
+                <div class="container-fluid d-flex p-0">
+                    <div class="d-flex  d-flex">
+                        <div class="box arrow-right col-lg-6 mt-5 mb-5 pt-5 ">
                             <h1 class="text-white fw-bold col-lg-10 contenttwo-text">KEZDETEK</h1>
                             <p class="text-white contenttwo-text2">A KMÉ-védjegy az Agrárminisztérium és a Nébih közös,
                                 kiemelt kezdeményezéseként jött létre 2019-ben.
@@ -208,18 +214,21 @@
                                 Szakszerű kidolgozásában az élelmiszeripar egésze részt vállalt. Ennek köszönhetően a
                                 minőségrendszer a valós piaci szükségletekre épül, szakmailag és tudományosan is
                                 megalapozott.</p>
-
+                                
                         </div>
-                        <div class="image-box col-lg-6 ">
+                        <!-- <div class="image-box col-lg-6 ">
                             <img class=" image-content d-none d-lg-block" src="images/Layer 121.png" alt="">
-                        </div>
+                        </div> --> 
+                        <div class="imagetest d-none  d-lg-block"></div>                 
                     </div>
+
                 </div>
             </div>
             <div class="image-bottom">
-            <div class=" ">
-            <img class="image-bottom img-fluid d-lg-none d-lg-block" src="images/Layer 121.png" alt="">
-    </div></div>
+                <div class=" ">
+                    <img class="image-bottom img-fluid d-lg-none d-lg-block" src="images/Layer 121.png" alt="">
+                </div>
+            </div>
             <div class="footer">
                 <div class="container pt-4 footer-top">
                     <div class="row">
@@ -239,7 +248,9 @@
                                 <li><a href="">KAPCSOLAT</a></li>
                                 <li><a href="">VÁLLALKOZÓK</a></li>
                                 <li><a href="">NYITÓOLDAL</a></li>
-                                <li class="mt-2"><button class="btn footer-button d-flex justify-content-center d-lg-none d-lg-block mb-2  rounded fw-bold">LAP TETEJÉRE</button></li>
+                                <li class="mt-2"><button
+                                        class="btn footer-button d-flex justify-content-center d-lg-none d-lg-block mb-2  rounded fw-bold">LAP
+                                        TETEJÉRE</button></li>
                             </ul>
                         </div>
                         <div class="col-lg-2 socialmedia">
@@ -295,20 +306,29 @@
                 <img class="szechenyi" src="/images/SZ2020.png" alt="">
 </body>
 <script>
-  
     const searchIcon = document.getElementById('search-icon');
+
 
     const searchContainer = document.querySelector('.search-container');
 
-  
-    searchIcon.onclick = function() {
- 
+
+    searchIcon.onclick = function () {
+
         if (searchContainer.style.display === 'none') {
             searchContainer.style.display = 'block';
         } else {
             searchContainer.style.display = 'none';
         }
     };
-    
+
+
+    const closeSearchIcon = document.getElementById('close-search');
+
+
+    closeSearchIcon.onclick = function () {
+
+        searchContainer.style.display = 'none';
+    };
 </script>
+
 </html>
