--- a/layout3.html
+++ b/layout3.html
@@ -141,6 +141,40 @@
                             </li>
                             <button type="button"
                                 class="button-nav btn btn-warning text-white d-flex ms-2 me-5 mt-2 mb-2 border-0">TERMÉKKERESŐ</button>
+                                <div class="border-2 border-top mt-5 pt-3">
+                                    <li class="nav-item">
+                                        <a class="nav-link active text-white" aria-current="page" href="#">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+                                                <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                                            </svg>
+                                            GYIK</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active text-white" aria-current="page" href="#">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+                                                <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                                            </svg>
+                                            KAPCSOLAT</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active text-white" aria-current="page" href="#">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+                                                <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                                            </svg>
+                                            HÍRLEVÉL </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active text-white" aria-current="page" href="#">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
+                                                <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
+                                            </svg>
+                                            VÁLLALKOZÓK </a>
+                                    </li>
+                                </div>
 
                     </div>
                 </div>
