--- a/layout4.html
+++ b/layout4.html
@@ -307,7 +307,7 @@
                     </div>
                 </div>
             </div>
-
+<!-- 
             <div class="contenttwo">
                 <div class="container">
                     <div class="cotenttwo-reverse d-flex flex-wrap">
@@ -324,7 +324,21 @@
                         
                     </div>
                 </div>
+            </div> -->
+            <div class="contenttwo2 container-fluid   d-flex ps-0 pe-0">
+                 <div class="contenttwo2-image col-lg-6"></div>
+                <div class="col-lg-4  custom-container">
+                    <div class="box arrow-right mt-4 mb-4  ps-5">
+                        <h1 class="text-white fw-bold col-lg-12 contenttwo-text mb-4">AZ ÉLELMISZEREK LEGJAVA</h1>
+                        <p class="text-white contenttwo-text2 col-lg-12">Magyarországon a KMÉ-védjegy a legtöbb, amit egy élelmiszer kaphat. Nemzeti minőségrendszer és tanúsító védjegy, amely a termelési folyamat minden szakaszában biztosítékot nyújt a kiváló minőségre, az élelmiszerbiztonságra és a fenntarthatóságra. 
+                            A tudatos vásárlók számára megbízható segítség a magabiztos választásban.
+                            </p>
+                            <button type="button" class="btn btn-light ps-4 pe-4 mt-3 button-main fw-bold">ISMERJE MEG A KMÉ-t!</button>
+                    </div>
+                </div>
+               
             </div>
+
             <div class="image-bottom">
                 <div class=" ">
                     <img class="image-bottom img-fluid d-lg-none d-lg-block" src="images/Layer 44.png" alt="">
