--- a/layout3.html
+++ b/layout3.html
@@ -303,9 +303,11 @@
 
                 </div>
             </div> -->
-            <div class="contenttwo2 container-fluid   d-flex pe-0">
-                <div class="col-lg-6 custom-container">
-                    <div class="box arrow-right mt-5 mb-5 pt-5">
+            <div class="wrapper">
+                <div class="contenttwo container pl-3">
+                        <div class="contenttwo2 container-fluid   d-flex pe-0">
+                            <div class="col-lg-6  custom-container ">
+                                <div class="box arrow-right my-5">
                         <h1 class="text-white fw-bold col-lg-10 contenttwo-text">KEZDETEK</h1>
                         <p class="text-white contenttwo-text2">A KMÉ-védjegy az Agrárminisztérium és a Nébih közös,
                             kiemelt kezdeményezéseként jött létre 2019-ben.
@@ -317,8 +319,8 @@
                     </div>
                 </div>
                 <div class="contenttwo2-image col-lg-6"></div>
-            </div>
-            
+            </div></div>
+        </div>
             <div class="image-bottom">
                 <div class=" ">
                     <img class="image-bottom img-fluid d-lg-none d-lg-block" src="images/Layer 121.png" alt="">
