--- a/layout1.html
+++ b/layout1.html
@@ -58,7 +58,7 @@
                         </div> -->
                         <div class="right  z-2">
                             <ul class="pe-2">
-                                <li class="border border-2 rounded "><a href=""><svg xmlns="http://www.w3.org/2000/svg"
+                                <li class=" border-2 rounded "><a href=""><svg xmlns="http://www.w3.org/2000/svg"
                                             width="25" height="25" fill="currentColor" class="bi bi-instagram"
                                             viewBox="0 0 16 16">
                                             <path
@@ -66,7 +66,7 @@
                                         </svg></a>
 
                                 </li>
-                                <li class="ms-3 me-3 border border-2 rounded "><a href=""> <svg
+                                <li class="ms-3 me-3  border-2 rounded "><a href=""> <svg
                                             xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                             <path
@@ -74,7 +74,7 @@
                                         </svg></a>
 
                                 </li>
-                                <li class="border border-2 rounded "><a href=""> <svg xmlns="http://www.w3.org/2000/svg"
+                                <li class=" border-2 rounded "><a href=""> <svg xmlns="http://www.w3.org/2000/svg"
                                             width="25" height="25" fill="currentColor" class="bi bi-youtube"
                                             viewBox="0 0 16 16">
                                             <path
@@ -239,7 +239,7 @@
                         </li>
                     </div>
                     <div class="d-flex">
-                        <li class="border border-2 rounded "><a href=""><svg xmlns="http://www.w3.org/2000/svg"
+                        <li class=" border-2 rounded "><a href=""><svg xmlns="http://www.w3.org/2000/svg"
                                     width="25" height="25" fill="currentColor" class="bi bi-instagram"
                                     viewBox="0 0 16 16">
                                     <path
@@ -247,7 +247,7 @@
                                 </svg></a>
 
                         </li>
-                        <li class="ms-3 me-3 border border-2 rounded "><a href=""> <svg
+                        <li class="ms-3 me-3  border-2 rounded "><a href=""> <svg
                                     xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                                     class="bi bi-facebook" viewBox="0 0 16 16">
                                     <path
@@ -255,7 +255,7 @@
                                 </svg></a>
 
                         </li>
-                        <li class="border border-2 rounded "><a href=""> <svg xmlns="http://www.w3.org/2000/svg"
+                        <li class=" border-2 rounded "><a href=""> <svg xmlns="http://www.w3.org/2000/svg"
                                     width="25" height="25" fill="currentColor" class="bi bi-youtube"
                                     viewBox="0 0 16 16">
                                     <path
@@ -323,7 +323,7 @@
                             <div class="card h-100 border-0">
                                 <img src="images/Layer 103 copy 3.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">PÁLYÁZHATÓ TERMÉKKÖRÖK</h5>
+                                    <h5 class="card-title">TERMÉKKÖRÖK</h5>
                                     <h6 class="card-text">Ne vegyen zsákbamacskát! Tájékozódjon előre az elvárt
                                         kíválóságú kritériumokról!</h6>
                                 </div>
@@ -349,7 +349,7 @@
                 <div class="contenttwo2 container-fluid   d-flex pe-0">
                     <div class="col-lg-6  custom-container ">
                         <div class="box arrow-right my-5">
-                            <h1 class="text-white fw-bold  contenttwo-text">TUDJON MEG TÖBBET A KMÉ-RŐL!</h1>
+                            <h1 class="text-white fw-bold  contenttwo-text">TUDJON MEG TÖBBET A <span class="contentfour-span">KMÉ</span> -RŐL!</h1>
                             <p class="text-white contenttwo-text2">A KMÉ-védjegy megbízható tanúsítvány, mert az
                                 "átlagos"
                                 védjegyekre
@@ -373,7 +373,8 @@
                     <h1 class="contentthree-h1 fw-bold">VÉDJEGYET! DE KINEK?</h1>
                     <p>A KMÉ-védjegyre valamennyi belföldi és EU tagországbeli élelmiszer-termelő,-előállító,-feldolgozó
                         és -forgalmazó pályázhat, aki rendelkezik FELIR-azonosítóval.</p>
-                    <ul class=""><span class="fw-bold">Pályázó lehet:</span>
+                        <span class="fw-bold d-flex ">Pályázó lehet:</span>
+                    <ul class="">
                         <li>mezőgazdasági termelő,</li>
                         <li>kistermelő,</li>
                         <li>élelmiszerelőállítást,-feldolgozást végző kis-,közepes és nagyvállalkozás,</li>
@@ -401,8 +402,12 @@
                                 <img src="images/Layer 107.png" alt="Kép 1" class="rounded-image">
 
                                 <div class="image-text arrow-bottom rounded pt-2 pb-2">
-                                    <h5>JÓ A VÁLLALKOZÁSOKNAK</h5>
-                                    <h6>A védjegyhasználóknak elismerést, job piaci versenypozíciót és több pályázati
+                                    <h5 class="d-flex justify-content-center align-items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
+                                          </svg>
+                                        JÓ A VÁLLALKOZÁSOKNAK</h5>
+                                    <h6 class="d-flex justify-content-center"> A védjegyhasználóknak elismerést, job piaci versenypozíciót és több pályázati
                                         lehetőséget biztosít</h6>
                                 </div>
 
@@ -412,9 +417,13 @@
                             <div class="image-container">
                                 <img src="images/Layer 109.png" alt="Kép 2" class="rounded-image">
                                 <div class="image-text rounded pt-2 pb-2">
-                                    <h5>JÓ A FOGYASZTÓKNAK</h5>
-                                    <h6>Könnyen felismerhetővé teszi a jó minőségű élelmiszereket. Megbízható segítséget
-                                        nyújt a magabiztos választásban.</h6>
+                                    <h5 class="d-flex justify-content-center align-items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
+                                          </svg>
+                                        JÓ A FOGYASZTÓKNAK</h5>
+                                    <h6 class="">
+                                        Könnyen felismerhetővé teszi a jó minőségű élelmiszereket, megbízható segítség a magabiztos választásban.</h6>
                                 </div>
                             </div>
                         </div>
@@ -422,8 +431,13 @@
                             <div class="image-container">
                                 <img src="images/Layer 54.png" alt="Kép 3" class="rounded-image">
                                 <div class="image-text rounded pt-2 pb-2">
-                                    <h5>JÓ MAGYARORSZÁGNAK</h5>
-                                    <h6 class="text-center">Támogatja a tudatos vásárlói magatartás terjedését és az
+                                    <h5 class="d-flex justify-content-center align-items-center">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+                                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
+                                          </svg>
+                                        JÓ MAGYARORSZÁGNAK</h5>
+                                    <h6 class="">
+                                        Támogatja a tudatos vásárlói magatartás terjedését és az
                                         általános élelmiszer-fogyasztási kultúra fejlődését.</h6>
                                 </div>
                             </div>
