--- a/layout3.html
+++ b/layout3.html
@@ -55,7 +55,7 @@
                     </div> -->
                         <div class="right  z-2">
                             <ul class="d-flex align-items-center">
-                                <li class="border border-2 rounded  d-flex align-items-center"><a href=""><svg
+                                <li class=" border-2 rounded  d-flex align-items-center"><a href=""><svg
                                             xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                                             <path
@@ -63,7 +63,7 @@
                                         </svg></a>
 
                                 </li>
-                                <li class="ms-3 me-3 border border-2 rounded  d-flex align-items-center"><a href=""><svg
+                                <li class="ms-3 me-3  border-2 rounded  d-flex align-items-center"><a href=""><svg
                                             xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                             <path
@@ -71,7 +71,7 @@
                                         </svg></a>
 
                                 </li>
-                                <li class="border border-2 rounded  d-flex align-items-center"><a href=""><svg
+                                <li class=" border-2 rounded  d-flex align-items-center"><a href=""><svg
                                             xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
                                             <path
@@ -235,7 +235,7 @@
                             </li>
                         </div>
                         <div class="d-flex">
-                            <li class="border border-2 rounded "><a href=""><svg xmlns="http://www.w3.org/2000/svg"
+                            <li class=" border-2 rounded "><a href=""><svg xmlns="http://www.w3.org/2000/svg"
                                 width="25" height="25" fill="currentColor" class="bi bi-instagram"
                                 viewBox="0 0 16 16">
                                 <path
@@ -243,7 +243,7 @@
                             </svg></a>
         
                     </li>
-                    <li class="ms-3 me-3 border border-2 rounded "><a href=""> <svg
+                    <li class="ms-3 me-3  border-2 rounded "><a href=""> <svg
                                 xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                 fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                 <path
@@ -251,7 +251,7 @@
                             </svg></a>
         
                     </li>
-                    <li class="border border-2 rounded "><a href=""> <svg xmlns="http://www.w3.org/2000/svg"
+                    <li class=" border-2 rounded "><a href=""> <svg xmlns="http://www.w3.org/2000/svg"
                                 width="25" height="25" fill="currentColor" class="bi bi-youtube"
                                 viewBox="0 0 16 16">
                                 <path
