--- a/layout5.html
+++ b/layout5.html
@@ -53,7 +53,7 @@
                     </div> -->
                         <div class="right  z-2">
                             <ul class="d-flex align-items-center">
-                                <li class="border border-2 rounded  d-flex align-items-center"><a href=""><svg
+                                <li class=" border-2 rounded  d-flex align-items-center"><a href=""><svg
                                             xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                                             <path
@@ -61,7 +61,7 @@
                                         </svg></a>
 
                                 </li>
-                                <li class="ms-3 me-3 border border-2 rounded  d-flex align-items-center"><a
+                                <li class="ms-3 me-3  border-2 rounded  d-flex align-items-center"><a
                                         href=""><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                             <path
@@ -69,7 +69,7 @@
                                         </svg></a>
 
                                 </li>
-                                <li class="border border-2 rounded  d-flex align-items-center"><a href=""><svg
+                                <li class=" border-2 rounded  d-flex align-items-center"><a href=""><svg
                                             xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                             fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
                                             <path
@@ -228,7 +228,7 @@
                             </li>
                         </div>
                         <div class="d-flex">
-                            <li class="border border-2 rounded "><a href=""><svg xmlns="http://www.w3.org/2000/svg"
+                            <li class=" border-2 rounded "><a href=""><svg xmlns="http://www.w3.org/2000/svg"
                                 width="25" height="25" fill="currentColor" class="bi bi-instagram"
                                 viewBox="0 0 16 16">
                                 <path
@@ -236,7 +236,7 @@
                             </svg></a>
         
                     </li>
-                    <li class="ms-3 me-3 border border-2 rounded "><a href=""> <svg
+                    <li class="ms-3 me-3  border-2 rounded "><a href=""> <svg
                                 xmlns="http://www.w3.org/2000/svg" width="25" height="25"
                                 fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                                 <path
@@ -244,7 +244,7 @@
                             </svg></a>
         
                     </li>
-                    <li class="border border-2 rounded "><a href=""> <svg xmlns="http://www.w3.org/2000/svg"
+                    <li class=" border-2 rounded "><a href=""> <svg xmlns="http://www.w3.org/2000/svg"
                                 width="25" height="25" fill="currentColor" class="bi bi-youtube"
                                 viewBox="0 0 16 16">
                                 <path
@@ -349,7 +349,7 @@
                                     <div class="customermain-image-container rounded mt-3 mb-3">
                                         <img src="images/Layer 57.png" alt="Kép 1" class="rounded-image">
                                         <div class="customermain-image-text ">
-                                            <p>TEJTERMÉKEK</p>
+                                            <p class="fw-bold">TEJTERMÉKEK</p>
 
                                         </div>
                                     </div>
@@ -358,7 +358,7 @@
                                     <div class="customermain-image-container mt-3 mb-3">
                                         <img src="images/Layer 60.png" alt="Kép 2" class="rounded-image">
                                         <div class="customermain-image-text ">
-                                            <p class="">SZÁRAZTÉSZTÁK</p>
+                                            <p class="fw-bold">SZÁRAZTÉSZTÁK</p>
 
                                         </div>
                                     </div>
@@ -367,7 +367,7 @@
                                     <div class="customermain-image-container mt-3 mb-3">
                                         <img src="images/Layer 59.png" alt="Kép 3" class="rounded-image">
                                         <div class="customermain-image-text">
-                                            <p class="">HÚSKÉSZÍTMÉNYEK</p>
+                                            <p class="fw-bold">HÚSKÉSZÍTMÉNYEK</p>
 
                                         </div>
                                     </div>
